--- a/templates/sales-staff.html
+++ b/templates/sales-staff.html
@@ -64,7 +64,10 @@
                     <a class="nav-link" href="{{ url_for('index') }}">Home</a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link" href="#">Sales Staff Dashboard <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="{{ url_for('sales_dashboard') }}">Sales Staff Dashboard</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">User ID - Sales Staff ID: {{ session['user_id'] }}</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="{{ url_for('logout_users') }}">Logout</a>
